# PersistentCollectives

./: CMakeLists.txt  INSTALL  Makefile.am  README.md  VERSION  configure.ac
src/: .perscoll.h.swp  CMakeLists.txt  coll.c  internal.h  perscoll.h  starttestwait.c  testwait.c  utils.c  vcoll.c
test/: CMakeLists.txt  Makefile.mk  README.md  test_assert.c
test/experiments/: Makefile  README.md  intranode-bcast-cache.c  intranode-bcast.c
